# linux_process_communication

./: CMakeLists.txt  mkfifo_demo.c  mkfifo_read_demo.c  mkfifo_write_demo.c  mmfd.c  msg_queue_demo.c  msg_queue_read_demo.c  msg_queue_write_demo.c  pipe_demo.c  semaphore_consumer_demo.c  semaphore_creator_demo.c  semaphore_demo.c  shared_memory_demo.c  signal_demo.c  socket_client_demo.c  socket_server_demo.c
